[project]
name = "comfyui-floodgate"
description = "This is an Extension for ComfyUI, which allows you to control the logic flow with just one click!"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-floodgate"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-floodgate"
Icon = ""
