[project]
name = "comfyui-floodgate"
description = "A node that allows you to switch between execution paths"
version = "1.1.0"
license = { text = "MIT License" }
dependencies = []

[project.urls]
Repository = "https://github.com/Haoming02/comfyui-floodgate"

[tool.comfy]
PublisherId = "haoming02"
DisplayName = "Floodgate"
Icon = ""
